Fix style mixup of x & y axis for overflow of header.

--- a/assets/scss/1-base/_header-global.scss
+++ b/assets/scss/1-base/_header-global.scss
@@ -5,8 +5,8 @@
   padding-left: 0;
   padding-right: 0;
   bottom: 0;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   &__brand {
     left: 1rem;
     position: absolute;
